# capa

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  run.py
assets/vpt_init_tokens/: moge_vpt-64.pt  unidepth_vpt-96.pt  vggt_vpt-16.pt
capa/: __init__.py  protocol.py
capa/model_wrappers/: __init__.py  base.py  moge_model.py  unidepth_model.py  vggt_model.py
capa/utils/: __init__.py  alignment.py  logging.py  metric.py  visualize.py
config/: moge_lora.yaml  moge_vpt.yaml  unidepth_lora.yaml  unidepth_vpt.yaml  vggt_lora.yaml  vggt_vpt.yaml
docs/: CAPA_RGBD_PIPELINE.md  ONBOARDING.md
scripts/: export_rgbd_capa_ply.py  setup_env.sh
